--- a/src/components/Works/Works.css
+++ b/src/components/Works/Works.css
@@ -17,7 +17,6 @@
   align-items: center;
   justify-content: flex-start;
   flex-direction: column;
-  
 }
 
 .Works__title {
@@ -94,40 +93,43 @@
   width: 100%;
 }
 
-.Works__card{
+.controller__active{
+  background-color: var(--blue);
+  color: white;
+}
+
+.Works__card {
   scroll-snap-type: x mandatory;
   overflow-x: scroll;
   overflow-y: hidden;
   display: flex;
-  
   align-items: center;
   width: 100%;
   scrollbar-width: none;
-  height: calc(100vh - 8vh - 5vh - 120px)
+  height: calc(100vh - 8vh - 5vh - 120px);
 }
 
-.container__card{
+.container__card {
   flex: 0 0 100%;
-  scroll-snap-align:center;
+  scroll-snap-align: center;
   width: 100%;
   object-fit: cover;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 30px;
+  padding: 70px 20px 0px 20px;
   position: relative;
   height: 80%;
 }
 
 
 
-
 /* ---- CARD ----*/
 /*Magic card*/
-.card {
-  width: 80%;
+.card__project {
+  width: 90%;
   height: 100%;
-  background: #f5f5f5;
+  background: white;
   overflow: visible;
   box-shadow: 4.5px 4.3px 4.8px rgba(0, 0, 0, 0.017),
     11.6px 11px 11.4px rgba(0, 0, 0, 0.029),
@@ -137,65 +139,249 @@
   display: flex;
   flex-direction: column;
   align-items: center;
- }
- 
- .card-info {
+  justify-content: flex-start;
+  border: none;
+  border-radius: 20px;
+  position: relative;
+}
+
+.card__content{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  top: -25%;
+}
+
+.card__info {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 2em;
-  padding: 0 1rem;
- }
- 
- .card-img {
+  justify-content: flex-start;
+  padding: 0 20px 0 20px;
+}
+
+/* ---- FLIP CARD ------*/
+
+.flip-card {
+  background-color: transparent;
+  width: 70%;
+  aspect-ratio: 1;
+  perspective: 1000px;
+  position: relative;
+  top: -25%;
+}
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  border-radius: 20px;
+}
+
+.flip-card-front {
+  background: transparent;
+}
+
+.flip-card-back {
+  background: transparent;
+  transform: rotateY(180deg);
+  
+}
+
+/*---- button back card -----*/
+
+.card__back{
+  width: 75%;
+  aspect-ratio: 1;
+  /* height: var(--size); */
+  border-radius: 30px;
+  position: relative;
+  transition: all 0.3s ease-in-out;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
+  gap: 20px
+}
+
+.Footer__button{
+  border: none;
+  background: none;
+  background-color: var(--blue);
+  width: 50px;
+  height: 50px;
+  border-radius: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: -10px 10px 20px 0px rgb(58, 162, 232,0.3);
+}
+
+.Footer__button:hover{
+  scale: 1.05;
+  transition: all 0.3s ease-in-out;
+}
+
+.Footer__button > svg{
+  fill: white;
+  width: 80%;
+  aspect-ratio: 1;
+}
+
+/*----------*/
+
+.card__img {
   width: 70%;
   aspect-ratio: 1;
   /* height: var(--size); */
   border-radius: 30px;
-  transform: translateY(-50%);
   position: relative;
-  transition: all .3s ease-in-out;
+  transition: all 0.3s ease-in-out;
   display: flex;
   align-items: center;
   justify-content: center;
- }
+  background-color: white;
+}
 
- .card-img img {
-   width: 80%;
-   aspect-ratio: 1;
- }
- 
- .card-img::before {
+.card__img img {
+  width: 80%;
+  aspect-ratio: 1;
+}
+
+.card__img::before {
   content: "";
   border-radius: inherit;
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 90%;
-  height: 90%;
+  width: 95%;
+  height: 95%;
   transform: translate(-50%, -50%);
-  border: 10px solid #e8e8e8;
- }
- 
- /*Text*/
- .text-title {
+  border: 4px solid #e8e8e8;
+}
+
+/*Text*/
+.card__info .card__title {
   text-transform: uppercase;
-  font-size: 0.75em;
-  color: #42caff;
-  letter-spacing: 0.05rem;
- }
- 
- .text-body {
-  font-size: .8em;
-  text-align: center;
-  color: #6f6d78;
-  font-weight: 400;
-  font-style: italic;
- }
- 
- /*Hover*/
- .card:hover .card-img {
+  /* font-size: 0.75em; */
+  color: var(--blue);
+  font-weight: 700;
+  /* letter-spacing: 0.05rem; */
+}
+
+.card__info .card__body {
+  text-align: justify;
+  color: var(--font);
+  /* font-weight: 400; */
+  
+}
+
+/*Hover*/
+.card__project:hover .card__img {
   width: 75%;
   aspect-ratio: 1;
+}
+
+/*--- Stack carrousel--*/
+
+/* --- Skills carrousel ----*/
+.skills {
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+  margin-top: 10px;
+  margin-bottom: 10px;
   
- }
+}
+
+.skills h6 {
+  color: var(--blue);
+}
+
+/* .styles-module_sliderBase__swkx1{
+  background-color: blue;
+} */
+
+.styles-module_sliderBase__swkx1 > div[data-arrow="right"],
+.styles-module_sliderBase__swkx1 > div[data-arrow="left"] {
+  bottom: 0;
+  height: 42px;
+  margin-bottom: auto;
+  margin-top: auto;
+  width: 40px;
+  position: absolute;
+  top: 0;
+  opacity: 1;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+}
+
+.styles-module_sliderBase__swkx1 > div[data-arrow="right"] {
+  background: linear-gradient(270deg, #fff 1%, hsla(0, 0%, 100%, 0));
+  right: 0;
+  
+}
+
+.styles-module_sliderBase__swkx1 > div[data-arrow="left"] {
+  background: linear-gradient(90deg, #fff 1%, hsla(0, 0%, 100%, 0));
+  left: 0;
+}
+
+.styles-module_sliderBase__swkx1 > div[data-arrow="right"] > button {
+  width:50%;
+  height: 60%;
+  position: absolute;
+  right: -10px;
+  border: none;
+  background: url(https://cdn.dsmcdn.com/web/production/slick-arrow.svg) no-repeat;
+  background-size: contain;
+  transform:scale(.5);
+}
+
+.styles-module_sliderBase__swkx1 > div[data-arrow="left"] > button {
+  width:50%;
+  height: 60%;
+  position: absolute;
+  left: -10px;
+  border: none;
+  background: url(https://cdn.dsmcdn.com/web/production/slick-arrow.svg)50% no-repeat;
+  background-size: contain;
+  transform: rotate(180deg) scale(.5);
+  
+}
+
+.skills__button {
+  background-color: rgb(233, 240, 255, 0.8);
+  border: none;
+  border-radius: 8px;
+  padding: 4px 7px 4px 7px;
+  color: var(--blue);
+  height: 40px;
+  margin-right: 15px;
+}
