--- a/src/components/Works/Works.css
+++ b/src/components/Works/Works.css
@@ -119,7 +119,7 @@
   align-items: center;
   padding: 70px 20px 0px 20px;
   position: relative;
-  height: 80%;
+  height: 90%;
 }
 
 
@@ -139,7 +139,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: space-around;
   border: none;
   border-radius: 20px;
   position: relative;
