--- a/src/components/Works/Works.css
+++ b/src/components/Works/Works.css
@@ -93,7 +93,7 @@
   width: 100%;
 }
 
-.controller__active{
+.controller__active {
   background-color: var(--blue);
   color: white;
 }
@@ -122,8 +122,6 @@
   height: 90%;
 }
 
-
-
 /* ---- CARD ----*/
 /*Magic card*/
 .card__project {
@@ -145,7 +143,7 @@
   position: relative;
 }
 
-.card__content{
+.card__content {
   width: 100%;
   height: 100%;
   display: flex;
@@ -163,6 +161,33 @@
   justify-content: flex-start;
   padding: 0 20px 0 20px;
 }
+
+/* --- Touch Me Label -----*/
+.touch__me{
+  border: none;
+  background: none;
+  background-color: var(--blue);
+  width: 45px;
+  height: 45px;
+  border-radius: 22.5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: -10px 10px 20px 0px rgb(58, 162, 232, 0.3);
+  padding: 5px;
+  position: absolute;
+  top: 7%;
+  right: 5%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.flip-card:hover .touch__me{
+  visibility: hidden;
+  transition: all 0.3s ease-in-out;
+}
+
+
 
 /* ---- FLIP CARD ------*/
 
@@ -188,7 +213,8 @@
   transform: rotateY(180deg);
 }
 
-.flip-card-front, .flip-card-back {
+.flip-card-front,
+.flip-card-back {
   position: absolute;
   display: flex;
   flex-direction: column;
@@ -208,12 +234,11 @@
 .flip-card-back {
   background: transparent;
   transform: rotateY(180deg);
-  
 }
 
 /*---- button back card -----*/
 
-.card__back{
+.card__back {
   width: 75%;
   aspect-ratio: 1;
   /* height: var(--size); */
@@ -224,10 +249,10 @@
   align-items: center;
   justify-content: center;
   background-color: white;
-  gap: 20px
+  gap: 20px;
 }
 
-.Footer__button{
+.Footer__button {
   border: none;
   background: none;
   background-color: var(--blue);
@@ -237,15 +262,15 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  box-shadow: -10px 10px 20px 0px rgb(58, 162, 232,0.3);
+  box-shadow: -10px 10px 20px 0px rgb(58, 162, 232, 0.3);
 }
 
-.Footer__button:hover{
+.Footer__button:hover {
   scale: 1.05;
   transition: all 0.3s ease-in-out;
 }
 
-.Footer__button > svg{
+.Footer__button > svg {
   fill: white;
   width: 80%;
   aspect-ratio: 1;
@@ -296,7 +321,6 @@
   text-align: justify;
   color: var(--font);
   /* font-weight: 400; */
-  
 }
 
 /*Hover*/
@@ -316,7 +340,6 @@
   flex-direction: column;
   margin-top: 10px;
   margin-bottom: 10px;
-  
 }
 
 .skills h6 {
@@ -345,7 +368,6 @@
 .styles-module_sliderBase__swkx1 > div[data-arrow="right"] {
   background: linear-gradient(270deg, #fff 1%, hsla(0, 0%, 100%, 0));
   right: 0;
-  
 }
 
 .styles-module_sliderBase__swkx1 > div[data-arrow="left"] {
@@ -354,26 +376,27 @@
 }
 
 .styles-module_sliderBase__swkx1 > div[data-arrow="right"] > button {
-  width:50%;
+  width: 50%;
   height: 60%;
   position: absolute;
   right: -10px;
   border: none;
-  background: url(https://cdn.dsmcdn.com/web/production/slick-arrow.svg) no-repeat;
+  background: url(https://cdn.dsmcdn.com/web/production/slick-arrow.svg)
+    no-repeat;
   background-size: contain;
-  transform:scale(.5);
+  transform: scale(0.5);
 }
 
 .styles-module_sliderBase__swkx1 > div[data-arrow="left"] > button {
-  width:50%;
+  width: 50%;
   height: 60%;
   position: absolute;
   left: -10px;
   border: none;
-  background: url(https://cdn.dsmcdn.com/web/production/slick-arrow.svg)50% no-repeat;
+  background: url(https://cdn.dsmcdn.com/web/production/slick-arrow.svg) 50%
+    no-repeat;
   background-size: contain;
-  transform: rotate(180deg) scale(.5);
-  
+  transform: rotate(180deg) scale(0.5);
 }
 
 .skills__button {
