--- a/src/components/Works/Works.css
+++ b/src/components/Works/Works.css
@@ -176,9 +176,10 @@
   padding: 5px;
   position: absolute;
   top: 7%;
-  right: 5%;
+  right: 8.5%;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
+  opacity: 0.8;
 }
 
 .flip-card:hover .touch__me{
