--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -282,8 +282,8 @@
   background-color: blue;
 } */
 
-.styles-module_sliderBase__swkx1 > div[data-arrow="right"],
-.styles-module_sliderBase__swkx1 > div[data-arrow="left"] {
+.skills .styles-module_sliderBase__swkx1 > div[data-arrow="right"],
+.skills .styles-module_sliderBase__swkx1 > div[data-arrow="left"] {
   bottom: 0;
   height: 42px;
   margin-bottom: auto;
@@ -297,18 +297,18 @@
   align-items: center;
 }
 
-.styles-module_sliderBase__swkx1 > div[data-arrow="right"] {
+.skills .styles-module_sliderBase__swkx1 > div[data-arrow="right"] {
   background: linear-gradient(270deg, #fff 1%, hsla(0, 0%, 100%, 0));
   right: 0;
   
 }
 
-.styles-module_sliderBase__swkx1 > div[data-arrow="left"] {
+.skills .styles-module_sliderBase__swkx1 > div[data-arrow="left"] {
   background: linear-gradient(90deg, #fff 1%, hsla(0, 0%, 100%, 0));
   left: 0;
 }
 
-.styles-module_sliderBase__swkx1 > div[data-arrow="right"] > button {
+.skills .styles-module_sliderBase__swkx1 > div[data-arrow="right"] > button {
   width:50%;
   height: 60%;
   position: absolute;
@@ -319,7 +319,7 @@
   transform:scale(.5);
 }
 
-.styles-module_sliderBase__swkx1 > div[data-arrow="left"] > button {
+.skills .styles-module_sliderBase__swkx1 > div[data-arrow="left"] > button {
   width:50%;
   height: 60%;
   position: absolute;
