--- a/src/components/Works/Works.css
+++ b/src/components/Works/Works.css
@@ -332,7 +332,7 @@
 /*--- Stack carrousel--*/
 
 /* --- Skills carrousel ----*/
-.skills {
+.skills{
   width: 80%;
   display: flex;
   justify-content: center;
@@ -350,8 +350,8 @@
   background-color: blue;
 } */
 
-.styles-module_sliderBase__swkx1 > div[data-arrow="right"],
-.styles-module_sliderBase__swkx1 > div[data-arrow="left"] {
+.skills .styles-module_sliderBase__swkx1 > div[data-arrow="right"],
+.skills .styles-module_sliderBase__swkx1 > div[data-arrow="left"] {
   bottom: 0;
   height: 42px;
   margin-bottom: auto;
@@ -365,17 +365,17 @@
   align-items: center;
 }
 
-.styles-module_sliderBase__swkx1 > div[data-arrow="right"] {
+.skills .styles-module_sliderBase__swkx1 > div[data-arrow="right"] {
   background: linear-gradient(270deg, #fff 1%, hsla(0, 0%, 100%, 0));
   right: 0;
 }
 
-.styles-module_sliderBase__swkx1 > div[data-arrow="left"] {
+.skills .styles-module_sliderBase__swkx1 > div[data-arrow="left"] {
   background: linear-gradient(90deg, #fff 1%, hsla(0, 0%, 100%, 0));
   left: 0;
 }
 
-.styles-module_sliderBase__swkx1 > div[data-arrow="right"] > button {
+.skills .styles-module_sliderBase__swkx1 > div[data-arrow="right"] > button {
   width: 50%;
   height: 60%;
   position: absolute;
@@ -387,7 +387,7 @@
   transform: scale(0.5);
 }
 
-.styles-module_sliderBase__swkx1 > div[data-arrow="left"] > button {
+.skills .styles-module_sliderBase__swkx1 > div[data-arrow="left"] > button {
   width: 50%;
   height: 60%;
   position: absolute;
