--- a/src/components/Works/Works.css
+++ b/src/components/Works/Works.css
@@ -263,6 +263,7 @@
   justify-content: center;
   align-items: center;
   box-shadow: -10px 10px 20px 0px rgb(58, 162, 232, 0.3);
+  z-index: 5;
 }
 
 .Footer__button:hover {
